--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@believablecreations/nestjs-joomla-web-api",
-  "version": "0.0.5-beta-4",
+  "version": "0.0.5-beta-5",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/B-E-L-I-E-V-E/nestjs-joomla-web-api"
+  },
   "description": "The Joomla API Integration for NestJS is a powerful and flexible NestJS plugin that enables seamless communication with Joomla's API. Designed for developers building applications that require data retrieval and management from Joomla-based websites, this plugin simplifies API interactions by providing an injectable service that handles authentication and request management.",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
