--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:article.service:watch": "npx dotenv -e .env.test -- jest --no-cache --runInBand --detectOpenHandles --watch test -- src/services/article/article.service.spec.ts",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "publish": "npm publish"
   },
+
   "dependencies": {
     "@nestjs/axios": "^4.0.0",
-    "@nestjs/swagger": "^11.0.6",
     "@nestjs/common": "^11.0.11",
+    "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.11",
     "@nestjs/platform-express": "^11.0.11",
+    "@nestjs/swagger": "^11.0.6",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -50,6 +53,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "dotenv-cli": "^7.3.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
